[workspace]
members = ["crates/server", "crates/client"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
bevy = "0.12.0"
bevy_rapier3d = { version = "0.23.0", features = ["parallel", "simd-stable"] }
tonic = "0.10.2"
prost = "0.12"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
tonic-build = "0.10.2"
